tests/bad/07_undefined_func.src
# Test: Undefined function
void main([string] args) {
    return undefined_func();  # Function not declared
}
